[tool.poetry]
name = "does_etl_custom"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.3.3"
tqdm = "^4.64.0" # custom dependency only for custom etl steps

# link the doe-suite repo integration
doespy = {path = "../doe-suite/doespy", develop = true}
pdf2image = "^1.17.0"
setuptools = "^76.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
