[package]
name = "dp_planner"
version = "0.1.1"
edition = "2021"
resolver = "2"
rust-version = "1.65"  # Also need to set this in rust-toolchain
default-run = "dp_planner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[lib]
name = "dp_planner_lib"
path = "src/lib.rs"
test = true
bench = false
doctest = false
crate-type = ["cdylib","lib"]

[[bin]]
name = "dp_planner"
path = "src/main.rs"
test = false
bench = false
doctest = false

[[bin]]
name = "measure_traps"
path = "src/measure_traps.rs"
test = false
bench = false
doctest = false

[dependencies]
petgraph = "0.6.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
itertools = "0.10.3"
float-cmp = "0.9.0"
multimap = "0.8.3"
fasthash ="0.4.0"
seahash = "4.1.0"
rand = "0.8.5"
clap = { version = "3.1.6", features = ["derive"] }
regex="1.5.5"
probability = "0.18.0"
grb = "1.3.0"
int-conv = "0.1.4"
csv = "1.1"
rayon = "1.5"
rug = "1.16"
log = "0.4"
env_logger = "0.9"
serde-aux = "3.0"
concurrent-queue = "1.2.3"
serial_test = "1.0.0"
num_cpus = "1.15"
intervallum = "1.4.1"
gcollections = "1.5.0"
bincode = "2.0.0-rc.3"
